--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
   },
   "dependencies": {
     "babel-loader": "^7.0.0",
+    "npm": "^5.7.1",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-css-transition-replace": "^3.0.2",
+    "react-dom": "^15.5.4",
+    "react-motion-ui-pack": "^0.10.3"
   },
   "main": "server.js"
 }
